撸啦啦噜啦啦噜啦噜啦嘞

--- a/pages/初级算法/数组/删除排序数组中的重复项.md
+++ b/pages/初级算法/数组/删除排序数组中的重复项.md
@@ -25,7 +25,7 @@ class Solution {
 }
 ```
   
-若```nums.length == 0``` 则直接返回0.
-先设定名为```length```整形变量, 以记录将返回数组的长度.  
-再遍历给定已排序的数组, 如果当前下标对应数字与```length```对应数字不一样, 则先将```length + 1```, 然后再对```length```下标赋值.  
+若`nums.length == 0` 则直接返回0.
+先设定名为`length`整形变量, 以记录将返回数组的长度.  
+再遍历给定已排序的数组, 如果当前下标对应数字与`length`对应数字不一样, 则先将`length + 1`, 然后再对`length`下标赋值.  
 程序时间复杂度为O(n), n为给定数组nums的长度.
