--- a/pages/初级算法/链表/删除链表中的节点.md
+++ b/pages/初级算法/链表/删除链表中的节点.md
@@ -14,7 +14,7 @@
 
 直接令当前节点的值等于下一个节点的值, 然后让指向下一个节点的节点指向下一个节点的下一个节点即可.
 
-```JAVA
+```java
 /**
  * Definition for singly-linked list.
  * public class ListNode {
