--- a/pages/BinaryTree/从中序与后序遍历序列构造二叉树.md
+++ b/pages/BinaryTree/从中序与后序遍历序列构造二叉树.md
@@ -1,4 +1,4 @@
-提供某个二叉树的中序排序与后序排序, 依照其重新构建出这个二叉树.
+提供某个二叉树的中序遍历与后序遍历, 依照其重新构建出这个二叉树.
 
 
 ## 思路
@@ -7,7 +7,7 @@
 
 后序遍历二叉树是先遍历左子树, 再遍历右子树, 最后记录根节点, 即 **左-右-根**
 
-这样看来, 给予的2个数组首个必是左树叶, 后序遍历的末尾一个必是根节点, 而在中序排序之间, 找到了根节点, 那么根节点左边就是左子树, 右边就是右子树.
+这样看来, 给予的2个数组首个必是左树叶, 后序遍历的末尾一个必是根节点, 而在中序遍历之间, 找到了根节点, 那么根节点左边就是左子树, 右边就是右子树.
 
 看个例子: 
 
@@ -20,11 +20,11 @@
      3
         
 
-这棵树的中序排序是 `[1, 2, 3, 4, 5, 6, 7, 8]`, 后序排序是 `[1, 3, 4, 2, 6, 8, 7, 5]`.
+这棵树的中序遍历是 `[1, 2, 3, 4, 5, 6, 7, 8]`, 后序遍历是 `[1, 3, 4, 2, 6, 8, 7, 5]`.
 
-首先取得根节点 `5`,  在中序排序中, `5` 的左边子数组为 `[1, 2, 3, 4]`, 右边子数组为 `[6, 7, 8]`, 所以可以将树写成 
+首先取得根节点 `5`,  在中序遍历中, `5` 的左边子数组为 `[1, 2, 3, 4]`, 右边子数组为 `[6, 7, 8]`, 所以可以将树写成 
 
-**根节点为5; 左子树为中序排序是[1, 2, 3, 4], 后序排序是[1, 3, 4, 2] 组成的二叉树; 右子树为中序排序是[6, 7, 8], 后序排序是[6, 8, 7] 组成的二叉树.** 
+**根节点为5; 左子树为中序遍历是[1, 2, 3, 4], 后序遍历是[1, 3, 4, 2] 组成的二叉树; 右子树为中序遍历是[6, 7, 8], 后序遍历是[6, 8, 7] 组成的二叉树.** 
 
 如下所示:
 
@@ -32,15 +32,15 @@
        /   \
      left  right
   
-     left:  中序排序: [1, 2, 3, 4]
-            后序排序: [1, 3, 4, 2]
-     right: 中序排序: [6, 7, 8]
-            后序排序: [6, 8, 7]
+     left:  中序遍历: [1, 2, 3, 4]
+            后序遍历: [1, 3, 4, 2]
+     right: 中序遍历: [6, 7, 8]
+            后序遍历: [6, 8, 7]
      
 
-就拿 `left` 子树再次为例, 根据后序排序最后一个节点 `2` 可知, left为 
+就拿 `left` 子树再次为例, 根据后序遍历最后一个节点 `2` 可知, left为 
 
-**根节点为2; 左子树为中序排序是[1], 后序排序是[1] 所组成的二叉树; 右子树为中序排序是[3, 4], 后序排序是[3, 4] 所组成的二叉树.** 
+**根节点为2; 左子树为中序遍历是[1], 后序遍历是[1] 所组成的二叉树; 右子树为中序遍历是[3, 4], 后序遍历是[3, 4] 所组成的二叉树.** 
 
 如下所示:
 
@@ -48,10 +48,10 @@
        /   \
      lleft  lright
   
-     lleft:  中序排序: [1]
-             后序排序: [1]
-     lright: 中序排序: [3, 4]
-             后序排序: [3, 4]
+     lleft:  中序遍历: [1]
+             后序遍历: [1]
+     lright: 中序遍历: [3, 4]
+             后序遍历: [3, 4]
 
 ### 题解1
 
@@ -65,23 +65,23 @@
   }
   
   public TreeNode buildTree(int[] inorder, int[] postorder, int leftStart, int leftEnd, int rightStart, int rightEnd) {
-    // 此时, 后序排序没有元素, 这代表这个节点为null. 
+    // 此时, 后序遍历没有元素, 这代表这个节点为null. 
     if (rightStart > rightEnd) {
       return null;
     }
     TreeNode root = new TreeNode(postorder[rightEnd]);
-    // 此时, 后序排序只有一个元素, 那么这个元素必定是根节点.
+    // 此时, 后序遍历只有一个元素, 那么这个元素必定是根节点.
     if (rightEnd == rightStart) {
       return root;
     }
-    // 在中序排序中获取根节点相对位置.
+    // 在中序遍历中获取根节点相对位置.
     int mid = 0;
     while (inorder[leftStart + mid] != root.val) {
       ++mid;
     }
-    // 计算左子树的中序排序与后序排序
+    // 计算左子树的中序遍历与后序遍历
     root.left = buildTree(inorder, postorder, leftStart , leftStart + mid - 1, rightStart, rightStart + mid - 1);
-    // 计算右子树的中序排序与后序排序
+    // 计算右子树的中序遍历与后序遍历
     root.right = buildTree(inorder, postorder, leftStart + mid + 1 , leftEnd, rightStart + mid, rightEnd - 1);
     return root;
   }
