--- a/pages/初级算法/链表/反转链表.md
+++ b/pages/初级算法/链表/反转链表.md
@@ -31,5 +31,35 @@ class Solution {
 
 ### 解法2 
 
-递归
+因为要反转链表, 那么每次将传入节点所指向的下一个节点移入首个节点的位置, 并且使得被传入节点指向它指向的节点所指向的下一个节点, 直到传入的节点所指向的节点为null为止, 完成列表反转.
+
+代码如下: 
+
+``` java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode() {}
+ *     ListNode(int val) { this.val = val; }
+ *     ListNode(int val, ListNode next) { this.val = val; this.next = next; }
+ * }
+ */
+class Solution {
+    public ListNode reverseList(ListNode head) {
+    	if (head == null) {
+    		return null;
+    	}
+      ListNode root = head;
+      while (root.next != null) {
+        ListNode node = root.next;
+        root.next = root.next.next;
+        node.next = head;
+        head = node;
+      }
+      return head;
+    }
+}
+```
 
