--- a/pages/AlgorithmsBookI/dp/把数字翻译成字符串.md
+++ b/pages/AlgorithmsBookI/dp/把数字翻译成字符串.md
@@ -71,3 +71,34 @@ class Solution {
     }
 }
 ```
+
+### 题解2
+
+当num只有一位数或者没有数时, 都只有一种方法.
+
+当前2个数字在10~25之间 则翻译次数为 $dp[i - 2] + dp[i - 1]$ 
+
+其余情况则翻译次数为 $dp[i - 1]$ 
+
+``` java
+class Solution {
+  public int translateNum(int num) {
+    String str = "" + num;
+    int[] dp = new int[str.length() + 1];
+    if (str.length() == 0 || str.length() == 1) {
+      return 1;
+    } else if (str.length() > 1) {
+      dp[0] = 1;
+      dp[1] = 1;
+    }
+    for (int i = 1; i < str.length(); ++i) {
+      if (str.charAt(i - 1) == '1' || (str.charAt(i - 1) == '2' && str.charAt(i) <= '5')) {
+        dp[i + 1] = dp[i] + dp[i - 1];
+      } else {
+        dp[i + 1] = dp[i];
+      }
+    }
+    return dp[str.length()];
+  }
+}
+```
