--- a/pages/初级算法/数组/移动0.md
+++ b/pages/初级算法/数组/移动0.md
@@ -35,3 +35,32 @@ class Solution {
     }
 }
 ```
+
+### 题解2
+
+先确定 0 所在的位置, 然后在其后面的数字依次补位上去.
+
+``` java
+class Solution {
+    public void moveZeroes(int[] nums) {
+      int head = -1;
+      for (int i = 0; i < nums.length; ++i) {
+        if (head == -1 && nums[i] == 0) {
+          // 确定0的初始位置.
+          head = i;
+        } else if (head != -1 && head < i) {
+          // 如果又找到了一个0, 则跳过这个.
+          if (nums[i] == 0) {
+            continue;
+          }
+          // 否则当前数字往前补.
+          nums[head++] = nums[i];
+        }
+      }
+      // 向后补零.
+      for (int i = head; i >= 0 && i < nums.length; ++i) {
+        nums[i] = 0;
+      }
+    }
+}
+```
