--- a/pages/Notes/位运算/汉明距离.md
+++ b/pages/Notes/位运算/汉明距离.md
@@ -79,7 +79,7 @@ class Solution {
 
 公式如下: 
 
-$ C = A XOR B $ 
+$ C = A\ XOR\ B $ 
 
 $ C = A \oplus B $
 
@@ -131,8 +131,8 @@ class Solution {
 
 如下面这个数字:
 
-|1|0|0|1|0|1|0|0|0|
-|-|-|-|-|-|-|-|-|-|
+|1|0|0|1|0|1|0|0|
+|-|-|-|-|-|-|-|-|
 
 如果使用移位的方法去判断这个二进制数中有多少个1时, 那么就得如下逐位判断.
 
@@ -154,13 +154,13 @@ class Solution {
 
 |运算|1|0|0|1|0|1|0|0|次数|
 |-|-|-|-|-|-|-|-|-|-|
-|1| | | | | | | | |1|
+|-1| | | | | | | | |1|
 |=|1|0|0|1|0|0|1|1| | 
 |&=|1|0|0|1|0|0|0|0| |
-|1| | | | | | | | |2|
+|-1| | | | | | | | |2|
 |=|1|0|0|0|1|1|1|1| | 
 |&=|1|0|0|0|0|0|0|0| |
-|1| | | | | | | | |3|
+|-1| | | | | | | | |3|
 |=|0|1|1|1|1|1|1|1| | 
 |&=|0|0|0|0|0|0|0|0| |
 
