--- a/blogs/problems/markdowns/LeetCode/动态规划/买卖股票的最佳时机.md
+++ b/blogs/problems/markdowns/LeetCode/动态规划/买卖股票的最佳时机.md
@@ -54,4 +54,18 @@
 当在第i天时有max利润, 那么在第i + 1天时, 有在第i + 1天时的股票价格减去在第1~i天时的股票最小值
 的差值为最大利润值或者是在第i天时的max利润值为最大
 
-转移的状态方程为:
+```
+class Solution {
+    public int maxProfit(int[] prices) {
+        int min = prices[0];
+        int max = 0;
+        for (int price : prices) {
+            // 先查看最大利润
+            max = Math.max(price - min, max);
+            // 再更新最小价格
+            min = Math.min(min, price);
+        }
+        return max;
+    }
+}
+```
