--- a/public/blogs/problems/markdowns/LeetCode/动态规划/买卖股票的最佳时机.md
+++ b/public/blogs/problems/markdowns/LeetCode/动态规划/买卖股票的最佳时机.md
@@ -53,7 +53,7 @@
 当在第i天时有max利润, 那么在第i + 1天时, 有在第i + 1天时的股票价格减去在第1~i天时的股票最小值
 的差值为最大利润值或者是在第i天时的max利润值为最大
 
-```
+```java
 class Solution {
     public int maxProfit(int[] prices) {
         int min = prices[0];
