--- a/public/blogs/problems/markdowns/LeetCode/动态规划/最佳观光组合.md
+++ b/public/blogs/problems/markdowns/LeetCode/动态规划/最佳观光组合.md
@@ -86,7 +86,7 @@
 
 双重循环, 但是容易超时, 时间复杂度为 $O(n^2)$
 
-```
+```java
 class Solution {
     public int maxScoreSightseeingPair(int[] values) {
         int max = -1;
@@ -114,7 +114,7 @@ class Solution {
 加上$(values[j] - j), j = k + 1$为最大或者是上一次的max值为最大.
 所以有如下题解:
 
-```
+```java
 class Solution {
     public int maxScoreSightseeingPair(int[] values) {
         int max1 = values[0];
