--- a/blogs/problems/markdowns/LeetCode/动态规划/714. 买卖股票的最佳时机含手续费.md
+++ b/blogs/problems/markdowns/LeetCode/动态规划/714. 买卖股票的最佳时机含手续费.md
@@ -55,7 +55,7 @@
 
 与 **买卖股票的最佳时机 II** 解题思路一样, 就是在买入时候减去手续费即可
 
-```
+```java
 class Solution {
   public int maxProfit(int[] prices, int fee) {
     int[][] dp = new int[prices.length][2];
@@ -71,7 +71,7 @@ class Solution {
 
 空间优化后的版本.
 
-```
+```java
 class Solution {
   public int maxProfit(int[] prices, int fee) {
     int lastDayHand = -prices[0] - fee;
